update summary; remove age

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
             </div>
             <div class="col-md-8">
                 <div class="intro">
-                    <p>I am an almost 28 years-old software engineer who is looking for a frontend engineer or a full-stack software engineer position in Barcelona as soon as possible.
+                    <p>I am a hungarian developer who is looking for a frontend engineer or a full-stack software engineer position in Barcelona as soon as possible.
                         I would like to work on my main area of expertise which is AngularJS, ReactJS and Node.js or dig deeper and get more practical experience in Python or Golang.</p>
 
                     <p>I am passionate about writing code, solving problems
                         and connecting things. I like trying out new tools and technologies and being up-to-date with the latest trends.</p>
-                    <p>
-                        I am a quick learner who likes discovering new territories, using completely unknown tools and expanding his knowledge day by day. So I am very open-minded, I do not stick to
+
+                    <p>I am a quick learner who likes discovering new territories, using completely unknown tools and expanding his knowledge day by day. So I am very open-minded, I do not stick to
                         any programming language, technology or framework. All of them can be learnt and has its place.</p>
 
                     <p>My favorite playground is frontend developing however I am not afraid of doing backend at all. I like seeing the results of my work
