--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-md-8">
                 <div class="basic-info">
-                    Szeged, Hungary
+                    Barcelona, Spain
                 </div>
             </div>
         </div> <!-- Szeged --->
@@ -115,8 +115,7 @@
             </div>
             <div class="col-md-8">
                 <div class="intro">
-                    <p>I am a hungarian developer who is looking for a frontend engineer or a full-stack software engineer position in Barcelona as soon as possible.
-                        I would like to work on my main area of expertise which is AngularJS, ReactJS and Node.js or dig deeper and get more practical experience in Python or Golang.</p>
+                    <p>I am a hungarian developer who is living in Barcelona.</p>
 
                     <p>I am passionate about writing code, solving problems
                         and connecting things. I like trying out new tools and technologies and being up-to-date with the latest trends.</p>
@@ -184,12 +183,15 @@
                 <div class="skills skills-level-3">
                     <div class="skill-list">
                         <span>Javascript</span>
-                        <span>AngularJS</span>
                         <span>ReactJS</span>
+                        <span>Redux</span>
+                        <span>Webpack</span>
+                        <span>ES6</span>
                         <span>Node.js</span>
                         <span>Github</span>
                         <span>Docker</span>
                         <span>JQuery</span>
+                        <span>AngularJS</span>
                         <span>Gulp</span>
                         <span>Bootstrap</span>
                         <span>Scrum</span>
@@ -212,7 +214,6 @@
             <div class="col-md-8">
                 <div class="skills skills-level-2">
                     <div class="skill-list">
-                        <span>ReactJS</span>
                         <span>LESS</span>
                         <span>Go</span>
                         <span>Python</span>
@@ -250,6 +251,18 @@
                 <div class="story-text-0 worked-at"> I worked at</div>
             </div>
             <div class="col-md-8 jobs">
+                <div class="job">
+                    <div class="job-header">
+                        <div> Apr. 2016 - Now</div>
+                        <div><span class="job-title">Frontend engineer</span>, <span
+                                class="job-place">Immfly</span></div>
+                    </div>
+                    <div class="job-description">
+                        I am a member of the frontend team. My main task is developing the current application which was achitectured and developed by us from scratch.
+                        We are using React to display elements and Redux to maintain the application state. We are buildig our application with Webpack. Our language of choice is ES6.
+                        We also maintain the old monolithic AngularJs application.
+                    </div>
+                </div>
                 <div class="job">
                     <div class="job-header">
                         <div> Aug. 2014 - Feb. 2016</div>
