Change phone number and and missing expertise

--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
                         <span class="fa fa-envelope"></span><a class="" target="_blank" href="mailto:peternagyxx@gmail.com">peternagyxx@gmail.com</a>
                     </div>
                     <div class="contact-item">
-                        <span class="fa fa-phone"></span><a class="" target="_blank" href="tel:+36302203780">+36 30 220 37
-                        80</a>
+                        <span class="fa fa-phone"></span><a class="" target="_blank" href="tel:+34657852876">+34 657 852 876</a>
                     </div>
                     <div class="contact-item">
                         <span class="fa fa-github-square"></span><a target="_blank" href="https://github.com/pnagy">Github</a>
@@ -215,6 +214,7 @@
                 <div class="skills skills-level-2">
                     <div class="skill-list">
                         <span>LESS</span>
+                        <span>CasperJS</span>
                         <span>Go</span>
                         <span>Python</span>
                         <span>C#</span>
