adding bw7 to the cv

--- a/index.html
+++ b/index.html
@@ -186,11 +186,10 @@
                         <span>Redux</span>
                         <span>Webpack</span>
                         <span>ES6</span>
+                        <span>AWS</span>
                         <span>Node.js</span>
                         <span>Github</span>
                         <span>Docker</span>
-                        <span>JQuery</span>
-                        <span>AngularJS</span>
                         <span>Gulp</span>
                         <span>Bootstrap</span>
                         <span>Scrum</span>
@@ -253,14 +252,24 @@
             <div class="col-md-8 jobs">
                 <div class="job">
                     <div class="job-header">
-                        <div> Apr. 2016 - Now</div>
+                        <div> Jul. 2016 - Now</div>
+                        <div><span class="job-title">Fullstack engineer</span>, <span
+                                class="job-place">Blackwood Seven</span></div>
+                    </div>
+                    <div class="job-description">
+                        I am a member of a self-organizing team in Barcelona. Our daly job is developing and maintaining a web application whose frontend was written in ES6 using react and redux and the backend is provided by AWS Lambdas.
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="job-header">
+                        <div> Apr. 2016 - Jul. 2016</div>
                         <div><span class="job-title">Frontend engineer</span>, <span
                                 class="job-place">Immfly</span></div>
                     </div>
                     <div class="job-description">
-                        I am a member of the frontend team. My main task is developing the current application which was achitectured and developed by us from scratch.
-                        We are using React to display elements and Redux to maintain the application state. We are buildig our application with Webpack. Our language of choice is ES6.
-                        We also maintain the old monolithic AngularJs application.
+                        I was a member of the frontend team. My main task was developing the current application which had been achitectured and developed by us from scratch.
+                        We were using React to display elements and Redux to maintain the application state. We were buildig our application with Webpack. Our language of choice was ES6.
+                        We also maintained the old monolithic AngularJs application.
                     </div>
                 </div>
                 <div class="job">
