--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         }
     </script>
     <!-- End of Woopra Code -->
+    <!-- Hotjar Tracking Code for https://pnagy.github.io/ -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 1572014, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 </head>
 
 <body>
@@ -94,7 +105,7 @@
             </div>
             <div class="col-md-8">
                 <div class="basic-info">
-                    Barcelona, Spain
+                    Szentes, Hungary
                 </div>
             </div>
         </div>
@@ -120,22 +131,32 @@
             </div>
             <div class="col-md-8">
                 <div class="intro">
-                    <p>I am a hungarian developer who is living in Barcelona.</p>
-                    <p>I'm a passionate problem solver who's hungry for new things everyday. I
-                        am totally polyglot, I am always ready to learn and use the most fitting
+                    <p>
+                        Hey! I am Péter a hungarian software
+                        engineer! At this moment I am looking for a new gig to
+                        join. I hope you will be interested in me and we can
+                        talk soon. At this moment I am only interested in remote
+                        positions, I am located in the EU timezone.
+                    </p>
+                    <p>
+                        I'm a passionate problem solver who's hungry for new things everyday. I
+                        am polyglot, I am always ready to learn and use the most fitting
                         language or technology. I strive for providing the best solutions but
                         I'm able to make a compromise. I also like adventures and think out-of-the
                         box and I'm not afraid of crazy ideas.
                     </p>
-                    <p>I'm a serious team player. I need people to learn from and to teach. I
-                        like to give and receive feedback because I believe that's the best
-                        way to be great together. I like peer programming and work together
-                        with others and for me it's natural to ask for help or provide help.</p>
-                    <p>Having the big picture and having reasons are really important for me.
-                        It's never good to do things just because they've been said it can
-                        easily kill my motivation.</p>
-                    <p>My biggest drivers are the people. I need diversity and I want to meet
-                        and work with people from different countries and cultures. I am seeking
+                    <p>
+                        I'm a committed team player. I need people to learn from
+                        and to teach. Feedback is very important to me, I
+                        beleive that's the way to improve connections between
+                        each other. I like peer programming, peer reviews
+                        and generally working close with others.
+                        Collaboration and communication are my
+                        natural habitat.
+                    </p>
+                    <p>
+                        I love people. I love diversity, I want to meet and work
+                        with people from different countries and cultures. I am seeking
                         an environment where I can face challenges everyday and where I have
                         the possibility to grow as a professional and more importantly as a
                         human.
@@ -205,7 +226,7 @@
                         <span>ES6</span>
                         <span>AWS</span>
                         <span>Node.js</span>
-                        <span>Travis</span>
+                        <span>GraphQL</span>
                         <span>Github</span>
                     </div>
                 </div>
@@ -219,8 +240,9 @@
             <div class="col-md-8">
                 <div class="skills skills-level-2">
                     <div class="skill-list">
+                        <span>Ruby on Rails</span>
+                        <span>CircleCI</span>
                         <span>Python</span>
-                        <span>C#</span>
                         <span>Visual Studio</span>
                         <span>Jenkins</span>
                         <span>Perforce</span>
@@ -238,11 +260,11 @@
             <div class="col-md-8">
                 <div class="skills skills-level-1">
                     <div class="skill-list">
+                        <span>C#</span>
                         <span>C++</span>
                         <span>Go</span>
                         <span>XCode</span>
-                        <span>Android SDK</span>
-                        <span>SVN</span>
+                        <span>Android SDK</span                        
                     </div>
                 </div>
             </div>
@@ -255,21 +277,45 @@
             <div class="col-md-8 jobs">
                 <div class="job">
                     <div class="job-header">
-                        <div class="job-date"> Jul. 2016 - Now (1 and a half year)</div>
+                        <div class="job-date"> May 2018 - Nov. 2019 (more than 1
+                        and a half year)</div>
+                        <div>
+                            <span class="job-title">Fullstack engineer</span>,
+                            <span class="job-company">GrooveHQ</span>
+                        </div>
+                    </div>
+                    <div class="job-description">
+                        Groove is customer suppport product targeting small and
+                        medium businesses, and it's famous for its simplicity
+                        and usability. I was lucky to be part of the company's
+                        full remote team. I was hired as a fullstack dev however
+                        I worked mostly on the frontend side and on the GraphQL
+                        application, only touching the Rails backend a few times
+                        when I had to. The frontend was built using React/Redux
+                        and Reselect. I worked closely with the company's
+                        designer and CPO.
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="job-header">
+                        <div class="job-date"> Jul. 2016 - May 2018 (almost 2 years)</div>
                         <div>
                             <span class="job-title">Fullstack engineer</span>,
                             <span class="job-company">Blackwood Seven</span>
                         </div>
                     </div>
                     <div class="job-description">
-                        Blackwood Seven provides an artificial intelligence based media spend automatization and optimization
-                        platform to its clients. Our Barcelona team was founded with the purpose
-                        to create UI services for AI products. This team was special on a way
-                        that we were taught to be self-managed, we had a big emphasis on coaching
+                        Blackwood Seven provides an artificial intelligence
+                        based media spend automatization and optimization
+                        platform to its clients. Our Barcelona team was founded
+                        with the purpose to create UI services for AI products.
+                        This team was special on a way that we were taught to be
+                        self-managed, we had a great emphasis on coaching
                         and human skills.
                         <ul>
                             <li>
-                                First I was part of a core team who developed an internal tool which helped the onboarding
+                                First I was part of a core team where we
+                                developed an internal tool for helping the onboarding
                                 of new clients. The outcome of this project was an easy-to-use
                                 user interface which could configure, monitor and integrate
                                 the main services of the company. Apart from a UI service we
@@ -278,19 +324,24 @@
                                 authorization API of the company.
                             </li>
                             <li>
-                                Then I was moved to a new experimental project where our goal was creating a totally automated
-                                AI platform. In this team engineers and data scientists worked
-                                together distributed evenly between Barcelona and Los Angeles.
-                                The main components were written in Python and were run in
-                                Kubernetes. We choose javascript for developing the user interface
-                                and the continuos deployment pipeline and we run them in AWS.
+                                Then I was moved to a new experimental project
+                                where our goal was creating a totally automated
+                                AI platform. In this team engineers and data
+                                scientists worked together distributed evenly
+                                between Barcelona and Los Angeles. The main
+                                components were written in Python and were run
+                                in Kubernetes. We choose javascript for
+                                developing the user interface and the continuos
+                                deployment pipeline and we run them in AWS.
                             </li>
                             <li>
-                                Recently I've been working as the lead engineer of a developing team working on the main client-facing
-                                application of the company. I work closely with other teams
-                                to make the best design decisions, I'm in touch with the product
-                                management and other stakeholders who provides the direction
-                                of my team.
+                                In the last months I was working as the lead engineer
+                                of the developing team working on the main
+                                client-facing application of the company. I worked
+                                closely with other teams to make the best design
+                                decisions, I was in touch with the product
+                                management and other stakeholders who provided
+                                the directions for my team.
                             </li>
                         </ul>
                     </div>
