--- a/index.html
+++ b/index.html
@@ -493,9 +493,16 @@
                         <div class="full">fluently</div>
                         <div>&nbsp;</div>
                     </div>
-                    <div class="language-name">french</div>
+                    <div class="language-name">spanish</div>
                     <div class="language-bar">
                         <div class="full">basicly</div>
+                        <div>&nbsp;</div>
+                        <div>&nbsp;</div>
+                        <div>&nbsp;</div>
+                    </div>
+                    <div class="language-name">french</div>
+                    <div class="language-bar">
+                        <div class="full">very basicly</div>
                         <div>&nbsp;</div>
                         <div>&nbsp;</div>
                         <div>&nbsp;</div>
