--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
                         box and I'm not afraid of crazy ideas.
                     </p>
                     <p>
-                        I'm a committed team player. I need people to learn from
+                        I'm a committed team player. I need others around to learn from
                         and to teach. Feedback is very important to me, I
                         beleive that's the way to improve connections between
-                        each other. I like peer programming, peer reviews
+                        people. I like peer programming, peer reviews
                         and generally working close with others.
-                        Collaboration and communication are my
+                        Collaborating and communicating are my
                         natural habitat.
                     </p>
                     <p>
@@ -275,6 +275,42 @@
                 <div class="story-text-0 worked-at"> I worked at</div>
             </div>
             <div class="col-md-8 jobs">
+                <div class="job">
+                    <div class="job-header">
+                        <div class="job-date"> Apr. 2020 - Sept. 2021 (half year)</div>
+                        <div>
+                            <span class="job-title">Fullstack engineer (Contractor)</span>,
+                            <span class="job-company">Taxfix</span>
+                        </div>
+                    </div>
+                    <div class="job-description">
+                        I had the pleasure joining the German startup Taxfix for 6 months as a freelancer, strengthening the team responsible for their new born Italy product. I worked as fullstack engineer adding new features with very quick iterations and many times with A/B testing. We had this very short 5 months long tax seasong to generate maxmimum traction. I worked mostly on the frontend that was a React Native application and sometimes on the backend services. 
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="job-header">
+                        <div class="job-date"> Sept. 2020 - Sept. 2021 (a year)</div>
+                        <div>
+                            <span class="job-title">Fullstack engineer</span>,
+                            <span class="job-company">Clevertech</span>
+                        </div>
+                    </div>
+                    <div class="job-description">
+                        Joining Clevertech gave me the taste of working in consultancy at an outsourcing company. During my whole tenure at Clevertech I worked to the same client as a Javascript engineer. Maintaning their legacy ExpressJS API and adding new feature to the React frontend were my mian tasks. 
+                    </div>
+                </div>
+                <div class="job">
+                    <div class="job-header">
+                        <div class="job-date"> May 2020 - Nov. 2020 (more than half year)</div>
+                        <div>
+                            <span class="job-title">Fullstack engineer</span>,
+                            <span class="job-company">MicroApps</span>
+                        </div>
+                    </div>
+                    <div class="job-description">
+                        I was a fullstack engineer at Microapps working on their newsletter product called MoonMail. We used AWS as backend and React on the frontend. I gained experience in using GraphQL and Apollo in production. I worked mostly alone with a PM adding new features and also fixing regression bugs.  
+                    </div>
+                </div>
                 <div class="job">
                     <div class="job-header">
                         <div class="job-date"> May 2018 - Nov. 2019 (more than 1
